--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "packages/core",
     "packages/langchain",
     "packages/mcp",
-    "packages/storage"
+    "packages/storage",
+    "apps/web"
   ],
   "scripts": {
     "build": "turbo build",
