--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint src/**/*.ts"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.1.1",
     "zod": "^3.22.4"
   }
 }
