--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -9,6 +9,7 @@
     "build": "tsc",
     "clean": "rm -rf dist coverage .turbo",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "build:test-servers": "node scripts/build-test-servers.js",
     "lint": "eslint src/**/*.ts"
   },
   "dependencies": {
