--- a/packages/mcp/tsconfig.json
+++ b/packages/mcp/tsconfig.json
@@ -4,7 +4,8 @@
   "exclude": ["node_modules", "dist"],
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src"
+    // "rootDir": "./src",
+    "composite": true
   },
   "references": [
     { "path": "../types" },
