running chat, working on tool integration

--- a/packages/langchain/tsconfig.json
+++ b/packages/langchain/tsconfig.json
@@ -7,7 +7,6 @@
     "rootDir": "./src"
   },
   "references": [
-    { "path": "../types" },
-    { "path": "../core" }
+    { "path": "../types" }
   ]
 }
