--- a/packages/mcp/tsconfig.json
+++ b/packages/mcp/tsconfig.json
@@ -8,7 +8,6 @@
     "composite": true
   },
   "references": [
-    { "path": "../types" },
-    { "path": "../core" }
+    { "path": "../types" }
   ]
 }
