--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@langchain/core": "^0.3.30",
     "@langchain/google-genai": "^0.1.6",
-    "@prisma/client": "^6.2.1",
+    "@mandrake/storage": "^0.0.1",
+    "@mandrake/types": "^0.0.1",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@types/react-syntax-highlighter": "^15.5.13",
@@ -20,7 +21,6 @@
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
     "pg": "^8.13.1",
-    "prisma": "^6.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-syntax-highlighter": "^15.6.1",
@@ -28,12 +28,12 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^3.2.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.4",
+    "eslint-config-next": "^15.1.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
