--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   ],
   "scripts": {
     "build": "turbo build",
-    "dev": "turbo dev",
+    "db": "tsx scripts/db.ts",
+    "db:start": "tsx scripts/db.ts start",
+    "db:stop": "tsx scripts/db.ts stop",
+    "db:clean": "tsx scripts/db.ts clean",
+    "dev": "npm run db:start && turbo run dev",
     "clean": "turbo clean",
     "test": "turbo test",
     "test:watch": "turbo test -- --watch",
@@ -22,16 +26,35 @@
     "typecheck": "turbo typecheck"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.24",
+    "@types/pg": "^8.11.10",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
+    "dotenv": "^16.4.7",
     "eslint": "^8.57.0",
+    "eslint-config-next": "^15.1.5",
     "eslint-config-prettier": "^9.1.0",
+    "glob": "^10.4.5",
     "jest": "^29.7.0",
+    "pg": "^8.13.1",
     "prettier": "^3.2.5",
+    "rimraf": "^5.0.10",
     "ts-jest": "^29.1.2",
+    "tsx": "^4.19.2",
     "turbo": "^2.3.3",
     "typescript": "^5.3.3"
+  },
+  "resolutions": {
+    "glob": "^10.0.0",
+    "rimraf": "^5.0.0",
+    "@eslint/config-array": "^0.19.0",
+    "@eslint/object-schema": "^2.1.5",
+    "inflight": "latest"
+  },
+  "dependencies": {
+    "@langchain/core": "^0.3.32",
+    "@langchain/openai": "^0.3.17"
   }
 }
