--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -1,23 +1,25 @@
 {
   "name": "@mandrake/storage",
   "version": "0.0.1",
-  "private": true,
-  "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --build",
     "clean": "rm -rf dist coverage .turbo",
-    "test": "jest",
-    "lint": "eslint src/**/*.ts"
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate deploy"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.32",
     "@mandrake/types": "^0.0.1",
-    "@prisma/client": "^5.10.2",
-    "prisma": "^5.10.2",
-    "zod": "^3.22.4"
+    "@prisma/client": "^5.8.0",
+    "langchain": "^0.3.12"
   },
   "devDependencies": {
-    "prisma": "^5.10.2"
+    "prisma": "^5.8.0",
+    "typescript": "^5.3.3"
   }
 }
