--- a/packages/mcp/tsconfig.json
+++ b/packages/mcp/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "extends": "../../tsconfig.base.json",
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"],
   "compilerOptions": {
     "outDir": "./dist",
-    // "rootDir": "./src",
+    "rootDir": "./src",
     "composite": true
   },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "**/__tests__/**"],
   "references": [
-    { "path": "../types" },
-    { "path": "../core" }
+    { "path": "../types" }
   ]
 }
