Alex/frontend2 rebase (#7)
* langchain + gemini working with a chat UI with prisma backend for persistence

* streaming responses now works and code snippets have syntax highlighting

* running chat, working on tool integration

* on the cusp of tool use working

* Almost there on tool calling

* wip state machine

* working streaming and tool use

* chat interface works + new readme

* working now and readme

---------

Co-authored-by: Test User <test@example.com>

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,7 @@
     "@mandrake/mcp": "^0.0.1",
     "@mandrake/storage": "^0.0.1",
     "@mandrake/types": "^0.0.1",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@prisma/client": "^6.2.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@types/react-syntax-highlighter": "^15.5.13",
     "class-variance-authority": "^0.7.1",
