--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,9 @@
     "@mandrake/types": "^0.0.1",
     "@prisma/client": "^6.2.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.1.5",
     "@types/react-syntax-highlighter": "^15.5.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
