--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@langchain/core": "^0.3.32",
-    "@langchain/openai": "^0.3.17"
+    "@langchain/openai": "^0.3.17",
+    "zustand": "^5.0.3"
   }
 }
