docker images should pull from github

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   ],
   "scripts": {
     "build": "turbo build",
-    "db": "tsx scripts/db.ts",
-    "db:start": "tsx scripts/db.ts start",
-    "db:stop": "tsx scripts/db.ts stop",
-    "db:clean": "tsx scripts/db.ts clean",
+    "db": "ts-node scripts/db.ts",
+    "db:start": "ts-node scripts/db.ts start",
+    "db:stop": "ts-node scripts/db.ts stop",
+    "db:clean": "ts-node scripts/db.ts clean",
     "dev": "npm run db:start && turbo run dev",
     "clean": "turbo clean",
     "test": "turbo test",
