--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,36 @@
 services:
+  postgres:
+    image: postgres:14-alpine
+    container_name: mandrake-postgres-dev
+    environment:
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_HOST_AUTH_METHOD: trust
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
+  git:
+    image: ghcr.io/strangelove-ventures/mcp/git:latest
+    container_name: mandrake-git
+    volumes:
+      - /Users/alexandercheng:/workspace
+
+  filesystem:
+    image: ghcr.io/strangelove-ventures/mcp/filesystem:latest
+    container_name: mandrake-filesystem
+    command: ["/workspace"]
+    volumes:
+      - /Users/alexandercheng:/workspace
+
+  fetch:
+    image: ghcr.io/strangelove-ventures/mcp/fetch:latest
+    container_name: mandrake-fetch
+    volumes:
+      - /Users/alexandercheng:/workspace
+
   api:
     container_name: mandrake-api
     build:
@@ -8,5 +40,13 @@ services:
       - .env
     environment:
       NODE_ENV: ${NODE_ENV}
+      DATABASE_URL: postgresql://postgres:password@postgres:5432/postgres
     ports:
       - "3000:3000"
+    depends_on:
+      - postgres
+    volumes:
+      - .:/app
+
+volumes:
+  postgres-data:
