deep in db test debugging, coming back to the frontend changes after fixing db notify

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   ],
   "scripts": {
     "build": "turbo build",
-    "db": "tsx scripts/db.ts",
-    "db:start": "tsx scripts/db.ts start",
-    "db:stop": "tsx scripts/db.ts stop",
-    "db:clean": "tsx scripts/db.ts clean",
+    "db": "tsx packages/storage/src/db/index.ts",
+    "db:start": "tsx packages/storage/src/db/index.ts start",
+    "db:stop": "tsx packages/storage/src/db/index.ts stop",
+    "db:clean": "tsx packages/storage/src/db/index.ts clean",
     "dev": "npm run db:start && turbo run dev",
     "clean": "turbo clean",
     "test": "turbo test",
