--- a/packages/storage/tsconfig.json
+++ b/packages/storage/tsconfig.json
@@ -13,6 +13,8 @@
     "declaration": true,
     "sourceMap": true
   },
-  "include": ["src/**/*"],
+  "include": [
+    "src/**/*"
+  ],
   "exclude": ["node_modules", "dist"]
 }
