--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -17,6 +17,7 @@
     "@langchain/core": "^0.3.32",
     "@mandrake/types": "^0.0.1",
     "@prisma/client": "6.2.1",
+    "@prisma/extension-pulse": "^1.2.0",
     "langchain": "^0.3.12"
   },
   "devDependencies": {
