--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc --build",
+    "test": "jest",
     "clean": "rm -rf dist coverage .turbo tsconfig.tsbuildinfo"
   },
   "devDependencies": {
