--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "tsc --build",
     "clean": "rm -rf dist coverage .turbo tsconfig.tsbuildinfo",
-    "test": "jest packages/mcp/src/docker/__tests__/multi-server.test.ts",
+    "test": "NODE_OPTIONS='--no-warnings --experimental-vm-modules' jest __tests__/multi-server.test.ts",
     "test:server": "jest packages/mcp/src/docker/__tests__/single-server.test.ts",
     "build:test-servers": "node scripts/build-test-servers.js",
     "lint": "eslint src/**/*.ts"
