--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "@langchain/core": "^0.3.32",
     "@langchain/openai": "^0.3.17",
+    "react-markdown": "^9.0.3",
     "zustand": "^5.0.3"
   }
 }
