fixing npm build. 4 tasks passing

--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "main": "./dist/index.js",
+  "browser": "./dist/browser.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc --build",
