--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -14,6 +14,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "@mandrake/langchain": "*"
   }
 }
