--- a/packages/langchain/tsconfig.json
+++ b/packages/langchain/tsconfig.json
@@ -2,12 +2,13 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "../../",
     "composite": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/__tests__/**"],
+  "exclude": ["node_modules", "dist"],
   "references": [
-    { "path": "../types" }
+    { "path": "../types" },
+    { "path": "../mcp" }
   ]
 }
