--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint src/**/*.ts"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.38",
     "@mandrake/types": "^0.0.1",
     "@modelcontextprotocol/sdk": "^1.1.1",
     "dockerode": "^4.0.3",
