--- a/packages/langchain/tsconfig.json
+++ b/packages/langchain/tsconfig.json
@@ -9,6 +9,7 @@
   "exclude": ["node_modules", "dist"],
   "references": [
     { "path": "../types" },
-    { "path": "../mcp" }
+    { "path": "../mcp" },
+    { "path": "../storage" }
   ]
 }
