--- a/package.json
+++ b/package.json
@@ -8,20 +8,32 @@
   ],
   "scripts": {
     "build": "bun run build:packages && bun run build:web",
-    "build:packages": "bun run build --cwd packages/*",
-    "build:web": "cd apps/web && bun run build",
+    "build:packages": "bun run build:utils && bun run build:workspace && bun run build:mcp && bun run build:provider && bun run build:session",
+    "build:utils": "bun run --cwd packages/utils build",
+    "build:workspace": "bun run --cwd packages/workspace build",
+    "build:mcp": "bun run --cwd packages/mcp build",
+    "build:provider": "bun run --cwd packages/provider build",
+    "build:session": "bun run --cwd packages/session build",
+    "build:web": "bun run --cwd apps/web build",
+    
     "test": "bun run test:packages && bun run test:web",
-    "test:packages": "bun run test --cwd packages/*",
-    "test:web": "cd apps/web && bun run test",
-    "test:utils": "cd packages/utils && bun run test",
-    "test:workspace": "cd packages/workspace && bun run test",
-    "test:mcp": "cd packages/mcp && bun run test",
-    "test:provider": "cd packages/provider && bun run test",
-    "test:session": "cd packages/session && bun run test",
-    "dev": "cd apps/web && bun run dev",
+    "test:packages": "bun run build:packages && bun run test:utils && bun run test:workspace && bun run test:mcp && bun run test:provider && bun run test:session",
+    "test:utils": "bun run --cwd packages/utils test",
+    "test:workspace": "bun run --cwd packages/utils build && bun run --cwd packages/workspace test",
+    "test:mcp": "bun run --cwd packages/utils build && bun run --cwd packages/mcp test",
+    "test:provider": "bun run --cwd packages/utils build && bun run --cwd packages/provider test",
+    "test:session": "bun run --cwd packages/utils build && bun run --cwd packages/session test",
+    "test:web": "bun run --cwd apps/web test",
+    
+    "dev": "bun run --cwd apps/web dev",
+    
     "lint": "bun run lint:packages && bun run lint:web",
-    "lint:packages": "bun run lint --cwd packages/*",
-    "lint:web": "cd apps/web && bun run lint"
+    "lint:packages": "bun run --cwd packages/* lint",
+    "lint:web": "bun run --cwd apps/web lint",
+
+    "clean": "bun run clean:packages && bun run clean:web",
+    "clean:packages": "bun run --cwd packages/* clean",
+    "clean:web": "bun run --cwd apps/web clean"
   },
   "devDependencies": {
     "@types/node": "latest",
