last commit here

--- a/package.json
+++ b/package.json
@@ -2,61 +2,56 @@
   "name": "mandrake-monorepo",
   "private": true,
   "type": "module",
-  "packageManager": "npm@10.9.2",
+  "packageManager": "bun@1.2.2",
   "workspaces": [
     "packages/types",
-    "packages/core",
-    "packages/langchain",
+    "packages/provider", 
     "packages/mcp",
     "packages/storage",
     "apps/web"
   ],
   "scripts": {
-    "build": "turbo build",
-    "db": "tsx packages/storage/src/db/index.ts",
-    "db:start": "tsx packages/storage/src/db/index.ts start",
-    "db:stop": "tsx packages/storage/src/db/index.ts stop",
-    "db:clean": "tsx packages/storage/src/db/index.ts clean",
-    "dev": "npm run db:start && turbo run dev",
-    "clean": "turbo clean",
-    "test": "turbo test",
-    "test:watch": "turbo test -- --watch",
-    "lint": "turbo lint",
+    "build": "bun run build:packages",
+    "build:packages": "bun run build:types && bun run build:mcp && bun run build:storage && bun run build:provider",
+    "build:types": "bun run --cwd packages/types build",
+    "build:mcp": "bun run --cwd packages/mcp build",
+    "build:storage": "bun run --cwd packages/storage build",
+    "build:provider": "bun run --cwd packages/provider build",
+    "build:web": "bun run --cwd apps/web build",
+
+    "test": "bun test",
+    "test:types": "bun run --cwd packages/types test",
+    "test:mcp": "bun run --cwd packages/mcp test",
+    "test:provider": "bun run --cwd packages/provider test",
+    "test:storage": "bun run --cwd packages/storage test",
+
+    "db": "bun run packages/storage/src/db/index.ts",
+    "db:start": "bun run packages/storage/src/db/index.ts start",
+    "db:stop": "bun run packages/storage/src/db/index.ts stop",
+    "db:clean": "bun run packages/storage/src/db/index.ts clean",
+    "dev": "bun run db:start && bun run dev:all",
+    "dev:all": "bun run --cwd apps/web dev",
+    "clean": "rm -rf **/dist",
+    "lint": "eslint .",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "typecheck": "turbo typecheck"
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.24",
     "@types/pg": "^8.11.10",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
+    "bun-types": "latest",
     "dotenv": "^16.4.7",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.1.5",
     "eslint-config-prettier": "^9.1.0",
-    "glob": "^10.4.5",
-    "jest": "^29.7.0",
     "pg": "^8.13.1",
     "prettier": "^3.2.5",
-    "rimraf": "^5.0.10",
-    "ts-jest": "^29.1.2",
-    "tsx": "^4.19.2",
-    "turbo": "^2.3.3",
     "typescript": "^5.3.3"
   },
-  "resolutions": {
-    "glob": "^10.0.0",
-    "rimraf": "^5.0.0",
-    "@eslint/config-array": "^0.19.0",
-    "@eslint/object-schema": "^2.1.5",
-    "inflight": "latest"
-  },
   "dependencies": {
-    "@langchain/anthropic": "^0.3.13",
-    "@langchain/core": "^0.3.38",
-    "@langchain/openai": "^0.3.17",
+    "@anthropic-ai/sdk": "^0.4.3",
     "date-fns": "^4.1.0",
     "react-markdown": "^9.0.3",
     "zustand": "^5.0.3"
