--- a/packages/mcp/tsconfig.json
+++ b/packages/mcp/tsconfig.json
@@ -7,14 +7,5 @@
   "include": [
     "src/**/*"
   ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "**/__tests__/**"
-  ],
-  "references": [
-    {
-      "path": "../types"
-    }
-  ]
+  "references": [ { "path": "../types" } ]
 }
