working workspace and mandrake manager system

--- a/packages/workspace/package.json
+++ b/packages/workspace/package.json
@@ -11,7 +11,8 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@mandrake/utils": "workspace:*"
+    "@mandrake/utils": "workspace:*",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "latest",
