--- a/packages/workspace/package.json
+++ b/packages/workspace/package.json
@@ -8,17 +8,18 @@
   "scripts": {
     "build": "tsc",
     "test": "bun test",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "db:generate": "drizzle-kit generate:sqlite",
+    "db:migrate": "bun run ./src/session/db/migrate.ts"
   },
   "dependencies": {
     "@mandrake/utils": "workspace:*",
-    "better-sqlite3": "^9.4.0",
-    "knex": "^3.1.0",
+    "drizzle-orm": "^0.29.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.9",
     "@types/node": "latest",
+    "drizzle-kit": "^0.20.13",
     "typescript": "^5.0.0"
   }
 }
