--- a/packages/workspace/tsconfig.json
+++ b/packages/workspace/tsconfig.json
@@ -4,6 +4,6 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "tests/db/operations.test.ts"],
   "exclude": ["node_modules", "dist", "tests"]
 }
