--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -2,6 +2,7 @@
   "name": "@mandrake/utils",
   "version": "0.0.1",
   "private": true,
+  "composite": true,
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
