--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "build:provider": "bun run --cwd packages/provider build",
     "build:session": "bun run --cwd packages/session build",
     "build:web": "bun run --cwd apps/web build",
-    
     "test": "bun run test:packages && bun run test:web",
     "test:packages": "bun run build:packages && bun run test:utils && bun run test:workspace && bun run test:mcp && bun run test:provider && bun run test:session",
     "test:utils": "bun run --cwd packages/utils test",
@@ -24,13 +23,10 @@
     "test:provider": "bun run --cwd packages/utils build && bun run --cwd packages/provider test",
     "test:session": "bun run --cwd packages/utils build && bun run --cwd packages/session test",
     "test:web": "bun run --cwd apps/web test",
-    
     "dev": "bun run --cwd apps/web dev",
-    
     "lint": "bun run lint:packages && bun run lint:web",
     "lint:packages": "bun run --cwd packages/* lint",
     "lint:web": "bun run --cwd apps/web lint",
-
     "clean": "bun run clean:packages && bun run clean:web",
     "clean:packages": "bun run --cwd packages/* clean",
     "clean:web": "bun run --cwd apps/web clean"
@@ -39,5 +35,9 @@
     "@types/node": "latest",
     "@types/bun": "latest",
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.5.0",
+    "dockerode": "^4.0.4"
   }
 }
