--- a/packages/provider/tsconfig.json
+++ b/packages/provider/tsconfig.json
@@ -4,6 +4,9 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "tests"]
+  "include": ["src/**/*", "../session/src/stream"],
+  "references": [
+    { "path": "../mcp" },
+    { "path": "../utils" }
+  ]
 }
