a couple of medium refactors for provider config format and workspace file management

--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -5,7 +5,9 @@
     "rootDir": "./src",
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "types": ["bun-types"]
+    "types": ["bun-types"],
+    "composite": true,
+    "declarationMap": true
   },
   "include": ["src/**/*"]
 }
