--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -6,7 +6,8 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "bun test",
-    "build": "bun build ./src/index.ts --outdir ./dist"
+    "build": "tsc",
+    "clean": "rm -rf dist"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.26.0",
