working session coordinator, stoked

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   ],
   "scripts": {
     "build": "bun run build:packages && bun run build:web",
-    "build:packages": "bun run build:utils && bun run build:workspace && bun run build:mcp && bun run build:provider && bun run build:session",
+    "build:packages": "bun run clean:packages && bun run build:utils && bun run build:workspace && bun run build:mcp && bun run build:provider && bun run build:session",
+    "build:session-deps": "bun run clean:packages && bun run build:utils && bun run build:workspace && bun run build:mcp && bun run build:provider",
     "build:utils": "bun run --cwd packages/utils build",
     "build:workspace": "bun run --cwd packages/workspace build",
     "build:mcp": "bun run --cwd packages/mcp build",
@@ -21,14 +22,19 @@
     "test:workspace": "bun run --cwd packages/utils build && bun run --cwd packages/workspace test",
     "test:mcp": "bun run --cwd packages/utils build && bun run --cwd packages/mcp test",
     "test:provider": "bun run --cwd packages/utils build && bun run --cwd packages/provider test",
-    "test:session": "bun run --cwd packages/utils build && bun run --cwd packages/session test",
+    "test:session": "bun run build:session-deps && bun run --cwd packages/session test",
     "test:web": "bun run --cwd apps/web test",
     "dev": "bun run --cwd apps/web dev",
     "lint": "bun run lint:packages && bun run lint:web",
     "lint:packages": "bun run --cwd packages/* lint",
     "lint:web": "bun run --cwd apps/web lint",
     "clean": "bun run clean:packages && bun run clean:web",
-    "clean:packages": "bun run --cwd packages/* clean",
+    "clean:mcp": "bun run --cwd packages/mcp clean",
+    "clean:provider": "bun run --cwd packages/provider clean",
+    "clean:session": "bun run --cwd packages/session clean",
+    "clean:utils": "bun run --cwd packages/utils clean",
+    "clean:workspace": "bun run --cwd packages/workspace clean",
+    "clean:packages": "bun run clean:utils && bun run clean:workspace && bun run clean:mcp && bun run clean:provider && bun run clean:session",
     "clean:web": "bun run --cwd apps/web clean"
   },
   "devDependencies": {
