--- a/packages/workspace/package.json
+++ b/packages/workspace/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cp -r src/session/db/migrations dist/session/db/migrations",
     "test": "bun test",
     "clean": "rm -rf dist",
     "db:generate": "drizzle-kit generate:sqlite",
