--- a/packages/workspace/tsconfig.json
+++ b/packages/workspace/tsconfig.json
@@ -2,8 +2,16 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
+    "noEmit": false,
     "rootDir": "./src"
   },
-  "include": ["src/**/*", "tests/db/operations.test.ts"],
-  "exclude": ["node_modules", "dist", "tests"]
+  "include": [
+    "src/**/*",
+    "src/session/db/migrations/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "tests"
+  ]
 }
