--- a/packages/workspace-tools/package.json
+++ b/packages/workspace-tools/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mandrake/ripper",
+  "name": "@mandrake/workspace-tools",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -12,13 +12,11 @@
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf dist",
-    "test": "NODE_ENV=test bun test",
-    "build-image": "docker build -t ripper -f Dockerfile ."
+    "test": "NODE_ENV=test bun test"
   },
   "dependencies": {
+    "@mandrake/workspace": "workspace:*",
     "fastmcp": "^1.17.0",
-    "directory-tree": "^3.5.1",
-    "ignore": "^5.3.1", 
     "zod": "^3.22.4"
   },
   "devDependencies": {
