--- a/packages/ripper/package.json
+++ b/packages/ripper/package.json
@@ -13,12 +13,15 @@
     "build": "tsc",
     "clean": "rm -rf dist",
     "test": "NODE_ENV=test bun test",
-    "build-image": "docker build -t ripper -f Dockerfile ."
+    "build-image": "docker build -t mandrake/ripper -f Dockerfile ."
   },
   "dependencies": {
-    "fastmcp": "^1.17.0",
+    "@modelcontextprotocol/sdk": "^1.5.0",
+    "@types/uri-templates": "^0.1.34",
     "directory-tree": "^3.5.1",
-    "ignore": "^5.3.1", 
+    "fastmcp": "^1.17.0",
+    "get-port-please": "^3.1.2",
+    "ignore": "^5.3.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
