--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,9 +13,10 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "14.1.0"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "typescript": "^5",
