basic token counting implementation

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -14,5 +14,10 @@
   "devDependencies": {
     "@types/node": "latest",
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@anthropic-ai/tokenizer": "^0.0.4",
+    "llama3-tokenizer-js": "^1.2.0",
+    "tiktoken": "^1.0.20"
   }
 }
