--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -10,5 +10,6 @@
     "composite": true,
     "declarationMap": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
