start from scratch again

--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   ],
   "scripts": {
     "build": "bun run build:packages && bun run build:web",
-    "build:packages": "bun run clean:packages && bun run build:utils && bun run build:workspace && bun run build:mcp && bun run build:provider && bun run build:session",
+    "build:packages": "bun run clean:packages && bun run build:utils && bun run build:workspace && bun run build:mcp && bun run build:provider && bun run build:session && bun run build:api",
     "build:session-deps": "bun run clean:packages && bun run build:utils && bun run build:workspace && bun run build:mcp && bun run build:provider",
     "build:utils": "bun run --cwd packages/utils build",
     "build:workspace": "bun run --cwd packages/workspace build",
     "build:mcp": "bun run --cwd packages/mcp build",
     "build:provider": "bun run --cwd packages/provider build",
     "build:session": "bun run --cwd packages/session build",
+    "build:api": "bun run --cwd packages/api build",
     "build:web": "bun run --cwd apps/web build",
     "test": "bun run test:packages && bun run test:web",
     "test:packages": "bun run build:packages && bun run test:utils && bun run test:workspace && bun run test:mcp && bun run test:provider && bun run test:session",
@@ -24,7 +25,10 @@
     "test:provider": "bun run --cwd packages/utils build && bun run --cwd packages/provider test",
     "test:session": "bun run build:session-deps && bun run --cwd packages/session test",
     "test:web": "bun run --cwd apps/web test",
-    "dev": "bun run --cwd apps/web dev",
+    "dev": "bun run dev:all",
+    "dev:all": "bun run dev:api & bun run dev:web",
+    "dev:api": "PORT=4000 bun run --cwd packages/api dev",
+    "dev:web": "PORT=3000 bun run --cwd apps/web dev",
     "lint": "bun run lint:packages && bun run lint:web",
     "lint:packages": "bun run --cwd packages/* lint",
     "lint:web": "bun run --cwd apps/web lint",
@@ -34,7 +38,8 @@
     "clean:session": "bun run --cwd packages/session clean",
     "clean:utils": "bun run --cwd packages/utils clean",
     "clean:workspace": "bun run --cwd packages/workspace clean",
-    "clean:packages": "bun run clean:utils && bun run clean:workspace && bun run clean:mcp && bun run clean:provider && bun run clean:session",
+    "clean:packages": "bun run clean:utils && bun run clean:workspace && bun run clean:mcp && bun run clean:provider && bun run clean:session && bun run clean:api",
+    "clean:api": "bun run --cwd packages/api clean",
     "clean:web": "bun run --cwd apps/web clean"
   },
   "devDependencies": {
