claude files, api start, minor fixes

--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "build:api": "bun run --cwd packages/api build",
     "build:web": "bun run --cwd apps/web build",
     "test": "bun run test:packages && bun run test:web",
-    "test:packages": "bun run build:packages && bun run test:utils && bun run test:workspace && bun run test:mcp && bun run test:provider && bun run test:session",
+    "test:packages": "bun run build:packages && bun run test:utils && bun run test:workspace && bun run test:mcp && bun run test:provider && bun run test:session && bun run test:api",
     "test:utils": "bun run --cwd packages/utils test",
     "test:workspace": "bun run --cwd packages/utils build && bun run --cwd packages/workspace test",
     "test:mcp": "bun run --cwd packages/utils build && bun run --cwd packages/mcp test",
     "test:provider": "bun run --cwd packages/utils build && bun run --cwd packages/provider test",
     "test:session": "bun run build:session-deps && bun run --cwd packages/session test",
+    "test:api": "bun run --cwd packages/api test",
     "test:web": "bun run --cwd apps/web test",
     "dev": "bun run dev:all",
     "dev:all": "bun run dev:api & bun run dev:web",
