--- a/packages/ripper/package.json
+++ b/packages/ripper/package.json
@@ -24,8 +24,12 @@
     "@modelcontextprotocol/sdk": "^1.5.0",
     "@types/uri-templates": "^0.1.34",
     "directory-tree": "^3.5.1",
+    "file-type": "^20.4.0",
+    "fuse.js": "^7.1.0",
     "get-port-please": "^3.1.2",
     "ignore": "^5.3.1",
+    "mcp-proxy": "^2.7.0",
+    "strict-event-emitter-types": "^2.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
