--- a/web/package.json
+++ b/web/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "test": "bun test",
     "test:watch": "bun test --watch",
     "test:coverage": "bun test --coverage",
-    "test:api": "bun ./tests/api-test-runner.js"
+    "test:api": "bun ./tests/api-test-runner.js",
+    "clean": "rm -rf .next node_modules"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.67.2",
