refactor mcp server into constituent parts for better testability and errors/functionality

--- a/packages/mcp/tsconfig.json
+++ b/packages/mcp/tsconfig.json
@@ -9,6 +9,7 @@
     "types": ["bun-types"]
   },
   "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"],
   "references": [
     { "path": "../utils" }
   ]
