--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -7,7 +7,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "INHERIT_ENV=true bun test",
+    "test": "bun test",
     "test:unit": "bun test",
     "lint": "eslint src/**/*.ts",
     "clean": "rm -rf dist"
